--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
+  "name": "char_vault-backend",
+  "version": "0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
